--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -843,10 +843,10 @@ Depois do plugin ser instalado é necessário realizar a configuração da taref
 
 \section{Como usar}
 
-A utilização do plugin é bem simples. Ao acessar uma tarefa o estudante deve clicar no botão de envio de tarefa e ao fazer isto o editor de mapas ira ser mostrado na tela, como na . Após criar ou editar o mapa o aluno deve clicar no botão “Salvar alterações” e o json será salvo no banco de dados da plataforma e aparecerá no sumário, confome \autoref{fig_editor}. Ao clicar no botão Sincronizar Mapa o diagrama será sincronizado na Nuvem da plataforma CMPaaS.
+A utilização do plugin é bem simples. Ao acessar uma tarefa o estudante deve clicar no botão de envio de tarefa e ao fazer isto o editor de mapas ira ser mostrado na tela, como na \autoref{fig_editor}. Após criar ou editar o mapa o aluno deve clicar no botão “Salvar alterações” e o json será salvo no banco de dados da plataforma e aparecerá no sumário, confome \autoref{fig_sumario}. Ao clicar no botão Sincronizar Mapa o diagrama será sincronizado na Nuvem da plataforma CMPaaS.
 
 \begin{figure}[htb]
-	\caption{\label{fig_editor} Sumário da tarefa}
+	\caption{\label{fig_editor} Editor de mapas}
 	\begin{center}
 		\includegraphics[scale=0.3]{editor.png}
 	\end{center}
@@ -863,7 +863,27 @@ A utilização do plugin é bem simples. Ao acessar uma tarefa o estudante deve 
 
 \section{Provas de Conceitos}
 
-Nesta seção será apresentada a utilização de todas as funcionalidades oferecidas pelo plugin.
+Nesta seção será apresentada a utilização de todas as funcionalidades oferecidas pelo plugin. Elas podem ser dividas em dois grupos, o de recursos para elaboração e edição dos mapas e o de persistência dos diagramas.
+
+Os recursos para edição de mapas são as funções de formatação da aparencia do diagrama disponíveis na barra de ferramentas. Elas permitem alterar a cor de preenchimento dos nós e o estilo da fonte de cada conceito. A \autoref{fig_mapa} mostra um mapa no qual foi aplicado estas funções. Já a \autoref{fig_toolbar} apresenta o conteúdo dos menus dropdown de fonte e cor de preenchimento do nó.
+
+Já a persistência do diagrama pode ser divida em duas, a gravação do mapa no Moodle e a sincronização com o CMPaaS. A primeira ocorre quando o usuário clica no botão Salvar Alterações, que foi apresentado na \autoref{fig_editor}. Já a sincronia com o CMPaaS ocorre quando o estudante utiliza o botão Sincronizar Mapa, que pode ser visto na cor verde na \autoref{fig_mapa}.
+
+\begin{figure}[htb]
+	\caption{\label{fig_mapa} Mapa que utiliza os recursos de formação}
+	\begin{center}
+		\includegraphics[scale=0.3]{mapa.png}
+	\end{center}
+	\legend{Fonte: Elaborada pelo autor}
+\end{figure}
+
+\begin{figure}[htb]
+	\caption{\label{fig_toolbar} Menus dropdown da barra de ferramentas}
+	\begin{center}
+		\includegraphics[scale=0.3]{toolbar.png}
+	\end{center}
+	\legend{Fonte: Elaborada pelo autor}
+\end{figure}
 
 % ----------------------------------------------------------
 % Finaliza a parte no bookmark do PDF
