--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -407,7 +407,13 @@
 %\addcontentsline{toc}{chapter}{Introdução}
 % ----------------------------------------------------------
 
+\section{Objetivo}
 
+O objetivo deste trabalho é a criar uma ferramenta que permite a utilização de mapas conceituais em cursos gerenciados pela plataforma Moodle.
+
+\section{Metodologia}
+
+\section{Estrutura deste trabalho}
 % ----------------------------------------------------------
 % PARTE
 % ----------------------------------------------------------
