objetivo, metodologia e estrutura

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -409,11 +409,40 @@
 
 \section{Objetivo}
 
-O objetivo deste trabalho é a criar uma ferramenta que permite a utilização de mapas conceituais em cursos gerenciados pela plataforma Moodle.
+O objetivo deste trabalho é a criar uma ferramenta que permite a utilização de mapas conceituais em cursos gerenciados pela plataforma Moodle integrado a plataforma CMPaaS.
+
+Para alcançar o objetivo principal foram definidos os seguintes objetivos específicos:
+
+\begin{itemize}
+	\item Estudar o que são mapas conceituais e suas aplicações na educação.
+	\item Estudar a arquitetura do Moodle e seus plugins.
+	\item Entender a plataforma CMPaaS.
+	\item Desenvolver um novo módulo para o Moodle segundo a arquiteura da plataforma e de seus plugins.   
+\end{itemize} 
+
+
 
 \section{Metodologia}
 
+A metodologia utilizada neste projeto consiste em uma pesquisa e revisão bibliográfica sobre mapas conceituais e sua aplicação no ensino. Inclui também o estudo da arquitetura do Moodle, de forma a entender o seu funcionamento e como podem ser desenvolvidos novos módulos para adicionar novos recursos à plataforma.
+
+O plugin desenvolvido neste trabalho será codificado em duas linguagens, JavaScript e PHP. A primeira será utilizada pois é a linguagem na qual o editor de mapas implementado no módulo utiliza. A segunda é a linguagem na qual o Moodle foi desenvolvido.  
+
 \section{Estrutura deste trabalho}
+
+Este trabalho será dividido nos capítulos descritos abaixo:
+
+\begin{itemize}
+	\item Capítulo 1: Apresenta a forma que o trabalho foi planejado e organizado. Este capítulo contém uma introdução sobre o projeto, seus objetivos e a metodologia de desenvolvimento.
+	\item Capítulo 2: Expõe o que são mapas conceituais e a sua importância no ensino. Também conceitua educação a ditância e apresenta a plataforma Moodle.
+	\item Capítulo 3: Faz uma descrição sobre a  plataforma CMPaaS e a sua arquitetura.    
+	\item Capítulo 4: Descreve como foi planejado o desenvolvimento do plugin, apresentando suas funcionalidades e como será implementado.
+	\item Capítulo 5: Detalha como o plugin foi desenvolvido.
+	\item Capítulo 6: Apresenta o resultado final do projeto, demonstrando sua instalação, configuração e utilização.
+	\item Capítulo 7: Faz uma avaliação dos resultados obtidos no trabalho e propõe trabalhos futuros.
+\end{itemize} 
+
+
 % ----------------------------------------------------------
 % PARTE
 % ----------------------------------------------------------
