--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -298,8 +298,8 @@
 % ---
 % Agradecimentos
 % ---
-% \begin{agradecimentos}
-% \end{agradecimentos}
+\begin{agradecimentos}
+\end{agradecimentos}
 % ---
 
 % ---
