--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -324,16 +324,9 @@
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
- Segundo a \citeonline[3.1-3.2]{NBR6028:2003}, o resumo deve ressaltar o
- objetivo, o método, os resultados e as conclusões do documento. A ordem e a extensão
- destes itens dependem do tipo de resumo (informativo ou indicativo) e do
- tratamento que cada item recebe no documento original. O resumo deve ser
- precedido da referência do documento, com exceção do resumo inserido no
- próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do
- resumo, antecedidas da expressão Palavras-chave:, separadas entre si por
- ponto e finalizadas também por ponto.
+ Este trabalho apresenta o desenvolvimento de um plugin que permite a aplicação de mapas conceituais em cursos gerenciados pelo Moodle. Os mapas conceituais são uma ferramenta gráfica cuja função é a representação do conhecimento, ela pode ser aplicada no ensino de diversas formas, como por exemplo um método de avaliação de aprendizagem. O Moodle é uma plataforma amplamenta utilizada por instituições no mundo inteiro para gerenciar cursos de ensino a distância. O plugin desenvolvido neste trabalho é integrado ao CMPaaS, que trata-se de uma plataforma que integra diversas ferramentas de manipulação de mapas conceituais.
 
- \textbf{Palavras-chave}: latex. abntex. editoração de texto.
+ \textbf{Palavras-chave}: Mapas Conceituais. Moodle. EaD. CMPaaS.
 \end{resumo}
 
 % resumo em inglês
