--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -400,9 +400,18 @@
 %\addcontentsline{toc}{chapter}{Introdução}
 % ----------------------------------------------------------
 
+Os mapas conceituais são ferramenta gráfica criada na década de 70, com o objetivo de ser uma representação do conhecimento. Eles são muito fáceis de utilizar e possuem ampla aplicação na educação, podendo ser usados para apresentar o conteúdo de uma aula, de um livro ou capítulo ou ainda como método de avaliação. Por ser muito simples, ele pode ser elaborado com lápis e papel, porém pode se tornar muito mais poderoso com o apoio de ferramentas computacionais.
+
+A proposta deste trabalho é justamente utilizar a computação para ampliar a aplicação dos mapas conceituais. Neste contexto foi pensado na criação de uma ferramenta que permita o uso dos mapas no ensina a distância. 
+
+O gerenciador de cursos Modular Objected-Oriented Dynamic Learning Environment (Moodle) foi escolhido para ser a plataforma de implementação deste projeto. Este escolha se deu pois ele é uma plataforma open-source, ou seja, pode ser livremente modificada, e também é modular, permitindo que novas ferramentas sejam adicionadas a ela facilmente. Além é claro, de ser amplamente utilizada por instituições de ensino no mundo todo.
+
+O módulo que será desenvolvido neste trabalho permitirá que estudantes dos cursos gerenciados pelo Moodle realizem atividades com a elaboração de mapas conceituais. Adicionalmente, o editor de mapas que será implementado também irá possuir integração com o CMPaaS, uma plataforma que oferece diversos serviços relacionados a mapas conceituais.
+
+
 \section{Objetivo}
 
-O objetivo deste trabalho é a criar uma ferramenta que permite a utilização de mapas conceituais em cursos gerenciados pela plataforma Moodle integrado a plataforma CMPaaS.
+O objetivo deste trabalho é a criar uma ferramenta que permite a utilização de mapas conceituais em cursos gerenciados pela plataforma Moodle integrado ao CMPaaS.
 
 Para alcançar o objetivo principal foram definidos os seguintes objetivos específicos:
 
