--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -47,7 +47,6 @@
 	keywords = {dynamic behavior,dynamic met-,execution tracing,javascript,program analysis,rics},
 	pages = {1},
 	title = {{An analysis of the dynamic behavior of JavaScript programs}},
-	url = {http://doi.acm.org/10.1145/1806596.1806598{\%}5Cnhttp://dl.acm.org/ft{\_}gateway.cfm?id=1806598{\&}type=pdf{\%}5Cnhttp://portal.acm.org/citation.cfm?doid=1806596.1806598},
 	year = {2010}
 }
 
@@ -59,7 +58,7 @@
 	journal = {Research.Moodle.Net},
 	pages = {1--16},
 	title = {{Moodle: Using Learning Communities to Create an Open Source Course Management System}},
-	url = {http://research.moodle.net/pluginfile.php/15/mod{\_}data/content/1121/Moodle - Dougiamas - 2003.pdf},
+	url = {http://research.moodle.net/pluginfile.php/15/mod_data/content/1121/Moodle - Dougiamas - 2003.pdf},
 	year = {2003}
 }
 
@@ -121,6 +120,18 @@
 	url = {http://www.abed.org.br/congresso2007/tc/4162007104526AM.pdf},
 	year = {2007}
 }
+
+@article{Perin2016,
+	author = {Perin, Wagner and Cury, Davidson},
+	doi = {10.5753/cbie.sbie.2016.230},
+	file = {:home/israel/Downloads/6703-8339-1-PB.pdf:pdf},
+	number = {Cbie},
+	pages = {230},
+	title = {{Uma Plataforma de Servi{\c{c}}os para Mapas Conceituais}},
+	url = {http://www.br-ie.org/pub/index.php/sbie/article/view/6703},
+	year = {2016}
+}
+
 
 @article{taurion2009,
 	author={Taurion, Cezar},
