Moodle is used to manage, is not the manager itself

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -349,7 +349,7 @@ minha formação acadêmica e pessoal.
 \begin{resumo}[Abstract]
   \begin{otherlanguage*}{english}
     This work presents the development of a \textit{plugin}  that allows the application of concept
-    maps in courses managed by Moodle. Concept maps are a graphical tool whose function
+    maps in courses managed on Moodle. Concept maps are a graphical tool whose function
     is the representation of knowledge, they can have several applications in teaching, such as
     a method of learning evaluation. Moodle is an extensive platform used by institutions
     worldwide to manage distance learning courses. The \textit{plugin}  developed in this work is
