let's talk about aplicability, not power

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -422,7 +422,7 @@ minha formação acadêmica e pessoal.
 %\addcontentsline{toc}{chapter}{Introdução}
 % ----------------------------------------------------------
 
-Os mapas conceituais são ferramenta gráfica criada na década de 70, com o objetivo de ser uma representação do conhecimento. São muito fáceis de utilizar e possuem ampla aplicação na educação, podendo ser usados para apresentar o conteúdo de uma aula, de um livro ou capítulo ou ainda como método de avaliação. Por ser muito simples, ele pode ser elaborado com lápis e papel, porém pode se tornar muito mais poderoso com o apoio de ferramentas computacionais.
+Os mapas conceituais são ferramenta gráfica criada na década de 70, com o objetivo de ser uma representação do conhecimento. São muito fáceis de utilizar e possuem ampla aplicação na educação, podendo ser usados para apresentar o conteúdo de uma aula, de um livro ou capítulo ou ainda como método de avaliação. Por ser muito simples, podem ser elaborados com lápis e papel, porém é possível uma alcançar novas aplicações ao se utilizar de recursos computacionais.
 
 A proposta deste trabalho é justamente utilizar a computação para ampliar a aplicação dos mapas conceituais. Neste contexto foi pensado na criação de uma ferramenta que permita o uso dos mapas no ensina a distância. 
 
